# website

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fix-directories.py  metadata.py  pelicanconf.py  projects.yaml  publishconf.py  requirements.txt  tasks.py
addins/: jinja_filters.py
content/2015/: how-to-create-ebook-from-website-spanning-multiple-pages.md  plotting-bakeries-certified-to-sell-st-martin-croissants.md  popularity-of-google-analytics-among-r-and-python-bloggers.md  reading-multiline-structured-file-format-in-r.md  the-map-of-bakeries-that-sell-genuine-st-martin-croissants.md  when-xml2-returns-no-matches-for-correct-xpath-expression.md  why-i-dont-use-github-exclusively.md
content/2016/: how-to-use-r-to-recognize-if-given-string-is-a-word.Rmd  how-to-use-r-to-recognize-if-given-string-is-a-word.md
content/2017/: setting-up-protractor-on-debian-gnu-linux.md  the-last-jedi-non-review.md
content/2018/: createpokemon-team-retrospective.md  everything-you-need-to-know-about-artificial-intelligence.md  found-on-web-ast-blogroll.md  found-on-web-mark-blyth.md  found-on-web-premises-of-rapid-software-testing.md  found-on-web-radiologist-are-testers-too.md  law-of-st-martin-croissants-spendings.md  practicing-the-rule-of-three-polish-saf-t.md  registering-for-testingcup.md  so-ibm-is-acquiring-red-hat.md  what-robots-can-t-do-speech-translation.md  why-i-love-pokemon.md
content/2019/: found-on-web-black-box-puzzles.md  how-to-win-3rd-place-at-testingcup.md  my-question-on-ab-testing-podcast.md  simple-visual-regression-checking-with-selenium-and-imagemagick.md  verify-changes-on-your-website-before-publishing-them.md  which-job-title-i-prefer.md
content/2020/: comments-on-istqbs-vision-on-the-future-of-software-testing-appendix.md  comments-on-istqbs-vision-on-the-future-of-software-testing.md
content/2021/: automatic-offline-twitter-card-images-og-image-generator-for-static-sites.md  further-improving-pelican-website-development-loop.md  improving-pelican-website-development-loop.md
content/2022/: announcing-kustosz.md  podman-pod-definition-for-wordpress-development.md  the-problems-with-test-levels.md
content/2023/: 10-years-in-testing.md  are-observability-and-monitoring-part-of-testing.md  asking-for-ssh-key-passphrase-when-signing-git-commit.md  ast-bod-report-november-2023.md  ast-bod-report-october-2023.md  ios-opening-google-drive-links-directly-in-an-app.md  playing-with-rust.md
content/2024/: 30-days-of-ai-in-testing-experience-report.md  ast-board-of-directors-elections-are-on.md  ast-bod-report-april-2024.md  ast-bod-report-february-2024.md  ast-bod-report-january-2024.md  dont-blindly-serve-webp-format.md  how-can-i-possibly-test-all-the-stuff-every-iteration.md  playwright-accessing-page-object-in-event-handler.md  rust-binaries-stability.md  software-testing-strategies-by-heusser-and-larsen-review.md  understanding-linux-virtualization-stack.md  whats-the-best-format-for-a-test-plan.md  when-the-build-is-green-the-product-is-of-sufficient-quality-to-release.md  why-dont-we-replace-the-testers-with-ai-postscript.md  why-dont-we-replace-the-testers-with-ai.md
content/2025/: customizing-fonts-look-with-opentype-features.md  django-data-modified-in-pre-save-signal-is-not-saved.md  experience-report-implementing-high-volume-automated-testing-system.md  interesting-bugs-artifact-building-failure-caused-by-github-api-rate-limits.md  interesting-bugs-peculiar-intermittent-failure-in-testing-pipeline.md  pytest-running-multiple-tests-with-names-that-might-contain-spaces.md  testing-a-new-feature-should-you-start-with-automation-or-by-inspecting-it-yourself.md  understanding-python-web-deployment.md  where-rust-fits-for-me.md
content/main/: index-resume.html  index.html  resume-graph.js
content/pages/: About Me.md  Privacy policy.md  Site policy.md  about.md  academic.md  contact.md  landing.en.md  landing.pl.md  main.md  name-pronunciation.md  projects.md  site-policy.md  whats-in-a-name.md
content/root/: .htaccess
content/static/: .htaccess
plugins/figures/: README.md  pyproject.toml
plugins/readtime/: README.md  pyproject.toml  readtime.py
plugins/readtime/pelican/plugins/readtime/: readtime.py
plugins/rename-to-slug/: README.md  pyproject.toml
plugins/rename_to_slug/: __init__.py  rename_to_slug.py
plugins/thumb-tag/: README.md  pyproject.toml
scripts/: fix-directories.py  generate-post-stats.py  generate-pygments-styles.py  generate-thumbnails.py
theme/: gulpfile.js  package-lock.json  package.json  purgecss.config.js
(+51 files in other folders)
